# libcom-api

./: Makefile  README.md  pyproject.toml
src/libcom_api/: __init__.py  testing.py  utils.py
src/libcom_api/routers/: __init__.py  color_transfer.py  controllable_composition.py  shadow_generation.py
tests/: conftest.py  endpoint_test.py
tests/routers/: color_transfer_test.py  controllable_composition_test.py  shadow_generation_test.py
