[project]
name = "libcom-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "loguru>=0.7.3",
    "torch>=1.1,<2.5",
]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5"]

[tool.uv.sources]
libcom = { git = "https://github.com/bcmi/libcom" }

[project.optional-dependencies]
build = ["pip", "setuptools", "torch"]
chumpy-compile = ["chumpy"]
libcom-compile = ["libcom"]

[tool.uv]
no-build-isolation-package = ["chumpy", "libcom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
